--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "~14.2.9",
     "bootstrap": "^5.1.3",
     "express": "^4.18.2",
+    "mongoose": "^6.7.2",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
