--- a/package.json
+++ b/package.json
@@ -20,9 +20,17 @@
     "@angular/platform-browser": "~14.2.9",
     "@angular/platform-browser-dynamic": "~14.2.9",
     "@angular/router": "~14.2.9",
+    "bcrypt": "^5.1.0",
     "bootstrap": "^5.1.3",
+    "crypto-js": "^4.1.1",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "helmet": "^6.0.0",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.7.2",
+    "mongoose-unique-validator": "^3.1.0",
+    "multer": "^1.4.5-lts.1",
+    "password-validator": "^5.3.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
@@ -31,6 +39,7 @@
     "@angular-devkit/build-angular": "^14.2.8",
     "@angular/cli": "~14.2.8",
     "@angular/compiler-cli": "~14.2.9",
+    "@types/crypto-js": "^4.1.1",
     "@types/jasmine": "~3.10.0",
     "@types/node": "^12.11.1",
     "jasmine-core": "~4.0.0",
